--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block main %}
 
-<div class="row">
+<div class="row" style="margin-top: 10%;">
   <div class="container">
     <form method="POST" class="col s12">
       {% csrf_token %}
@@ -16,16 +16,16 @@
       </div>
 
       <div class="row col s12">
-        <a href="/forgot_password.html" class="grey-text text-darken-4 right">Esqueceu a senha?</a> 
+        <a href="#" class="grey-text text-darken-4 right">Esqueceu a senha?</a> 
       </div>
 
       <button class="blue darken-4 waves-effect waves-light btn col s12 row" type="submit">
         Entrar
       </button>
-    </form>
-      <div class="row">
-        Nova na organização? <a href="/forgot_password.html" class="grey-text text-darken-4 center">Solicite Cadastro.</a> 
+      <div class="row right">
+        Nova na organização? <a href="/new_user" class="grey-text text-darken-4">Solicite Cadastro.</a> 
       </div>
+    </form>
   </div>
 </div>
 
