:wrench: Create organization app

--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -23,7 +23,7 @@
         Entrar
       </button>
       <div class="row right">
-        Nova na organização? <a href="/new_user" class="grey-text text-darken-4">Solicite Cadastro.</a> 
+        <a href="/new_user" class="grey-text text-darken-4"> Nova na organização? Solicite Cadastro.</a> 
       </div>
     </form>
   </div>
