--- a/organizations/templates/base.html
+++ b/organizations/templates/base.html
@@ -6,6 +6,7 @@
   <title>PoPe - Portal de Pesquisas</title>
   <link rel="stylesheet" href="{% static 'css/materialize.min.css' %}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="{% static 'js/jquery.min.js' %}"></script>
   <script src="{% static 'js/materialize.min.js' %}"></script>
 </head>
