--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -5,7 +5,7 @@
 <head>
   <title>PoPe - Portal de Pesquisas</title>
   <link rel="stylesheet" href="{% static 'css/materialize.min.css' %}">
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="{% static 'js/jquery.min.js' %}"></script>
   <script src="{% static 'js/materialize.min.js' %}"></script>
