:wrench: Add organization form

--- a/organizations/templates/base.html
+++ b/organizations/templates/base.html
@@ -23,7 +23,7 @@
       </div>
     </nav>
   </header>
-  <div class="container col s12">
+  <div class="container col s12" style="height: 80vh; overflow-y: auto;">
     {% block main %} {% endblock %}
   </div>
   <footer style="position: fixed; bottom: 0; width: 100%;">
