--- a/organizations/templates/organization_form.html
+++ b/organizations/templates/organization_form.html
@@ -1,42 +1,46 @@
-{% extends 'base.html' %}
-{% block main %}
-{% load compress %}
+{% extends 'base.html' %} {% block main %} {% load compress %}
 <!-- Form Organization HTML -->
-<div class="row" style="margin-top: 10%; height: 90vh; overflow-y: auto;">
+<div class="row" style="margin: 10% 0;">
   <div class="container">
-    <form method="POST" class="col s12">
+    <form method="POST" class="col s12" action="{% url 'new-organization' %}">
       {% csrf_token %}
       <div class="input-field row col s12">
-        <input name="org_name" id="org_name" type="text"  required>
+        <input name="org_name" id="org_name" type="text" required>
         <label for="org_name">Nome da Organização</label>
         {{ form.org_name.errors}}
       </div>
       <div class="input-field row col s6">
-        <input name="cnpj" id="cnpj" type="text"  required>
+        <input name="cnpj" id="cnpj" type="text" required>
         <label for="cnpj">CNPJ</label>
-        {{ form.cnpj.errors}}
+        <span class="helper-text red-text" data-error="true">
+          {{ form.cnpj.errors}}
+        </span>
       </div>
       <div class="input-field row col s6">
-        <input name="telephone" type="text" id="telephone"  required>
+        <input name="telephone" type="text" id="telephone" required>
         <label for="telephone">Telefone</label>
-        {{ form.telephone.errors}}
+        <span class="helper-text red-text" data-error="true">
+          {{ form.telephone.errors}}
+        </span>
       </div>
       <div class="input-field row col s12">
-        <input name="social_reason" id="social_reason" type="text"  required>
+        <input name="social_reason" id="social_reason" type="text" required>
         <label for="social_reason">Razão Social</label>
-        {{ form.social_reason.errors}}
+        <span class="helper-text red-text" data-error="true">
+          {{ form.social_reason.errors}}
+        </span>
       </div>
       <div class="input-field row col s12">
         <input name="email" type="email" id="email" required>
         <label for="email">Email</label>
-        <span class="helper-text" data-error="true">
+        <span class="helper-text red-text" data-error="true">
           {{ form.email.errors }}
         </span>
       </div>
-      <div class="input-field row col s3">
+      <div class="input-field row col s6">
         <input name="cep" type="text" id="cep" required>
         <label for="cep">CEP</label>
-        <span class="helper-text" data-error="true" id="cep-error">
+        <span class="helper-text red-text" data-error="true" id="cep-error">
           {{ form.cep.errors }}
         </span>
       </div>
@@ -52,7 +56,7 @@
       <div class="input-field row col s12">
         <input name="additional_addr" type="text" id="additional_addr" required>
         <label for="additional_addr">Complemento</label>
-        <span class="helper-text" data-error="true">
+        <span class="helper-text red-text" data-error="true">
           {{ form.additional_addr.errors }}
         </span>
       </div>
@@ -62,32 +66,29 @@
     </form>
   </div>
 </div>
-{% compress js inline %}
 <script>
-let lastCep = '';
-function getLogradouro() {
-  const btnCep = document.getElementById('btn-cep');
-  const cep = document.getElementById('cep').value;
-  const cepError = document.getElementById('cep-error');
-  cepError.innerHTML = '';
-  
-  cep && lastCep !== cep && (btnCep.disabled = true);
-  cep && lastCep !== cep && fetch(`https://viacep.com.br/ws/${cep}/json/`).then(res => res.json()).then(data => {
-    btnCep.disabled = false;
-    lastCep = cep;
-    if (data.error) {
+  let lastCep = '';
+  function getLogradouro() {
+    const btnCep = document.getElementById('btn-cep');
+    const cep = document.getElementById('cep').value;
+    const cepError = document.getElementById('cep-error');
+    cepError.innerHTML = '';
+
+    cep && lastCep !== cep && (btnCep.disabled = true);
+    cep && lastCep !== cep && fetch(`https://viacep.com.br/ws/${cep}/json/`).then(res => res.json()).then(data => {
+      btnCep.disabled = false;
+      lastCep = cep;
+      if (data.error) {
+        cepError.innerHTML = 'CEP inválido.';
+        return;
+      }
+      const logradouroField = document.getElementById('logradouro');
+      logradouroField.value = data.logradouro;
+      logradouroField.focus()
+    }).catch(() => {
+      lastCep = cep;
+      btnCep.disabled = false;
       cepError.innerHTML = 'CEP inválido.';
-      return;
-    }
-    const logradouroField = document.getElementById('logradouro');
-    logradouroField.value = data.logradouro;
-    logradouroField.focus();
-  }).catch(() => {
-    lastCep = cep;
-    btnCep.disabled = false;
-    cepError.innerHTML = 'CEP inválido.';
-  });
-}
-</script>
-{% endcompress %}
-{% endblock %}
+    });
+  }
+</script> {% endblock %}
