--- a/users/templates/user_form.html
+++ b/users/templates/user_form.html
@@ -1,9 +1,8 @@
-{% extends 'base.html' %}
-{% block main %}
+{% extends 'base.html' %} {% block main %}
 
 <div class="row" style="margin-top: 10%;">
   <div class="container">
-    <form method="POST" class="col s12">
+    <form method="POST" class="col s12" action="{% url 'new-user' %}">
       {% csrf_token %}
       <div class="input-field row col s12">
         <input name="username" id="username" type="text" class="validate" required>
@@ -27,7 +26,7 @@
         </select>
         <label for="user_type">Tipo de Cadastro</label>
       </div>
-      
+
       <div class="input-field row col s12">
         <input name="email" type="email" id="email" class="validate" required>
         <label for="email">Email</label>
