:wrench: Estilizando a aplicação

--- a/organizations/templates/base.html
+++ b/organizations/templates/base.html
@@ -15,9 +15,11 @@
     <nav>
       <div class="nav-wrapper blue darken-4" style="padding: 0 5px;">
         <a href="#" class="brand-logo white-text center hide-on-small-and-down">
+
           PoPe - Portal de Pesquisas
         </a>
         <a href="#" class="brand-logo white-text center hide-on-med-and-up">
+          <span><img src="../../static/logo.png" class="img-responsive" alt="teste"></span>
           PoPe
         </a>
       </div>
@@ -27,8 +29,8 @@
     {% block main %} {% endblock %}
   </div>
   <footer style="position: fixed; bottom: 0; width: 100%;">
-    <div class="footer-copyright blue darken-4" style="width: 100%; text-align: center; height: 50px; padding-top: 15px;">
-      <a class="white-text center-align" href="https://cpa-bayarea.github.io">2018 - Desenvolvido por IESB - BayArea</a>
+    <div class="footer-copyright blue darken-4" style="width: 100%; text-align: center; height: 70px; padding-top: 15px;">
+      <a class="white-text center-align" href="https://cpa-bayarea.github.io">2018 - Desenvolvido por IESB - Centro de práticas acadêmicas BayArea</a>
     </div>
   </footer>
 </body>
