--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -11,10 +11,10 @@
   <script src="{% static 'js/materialize.min.js' %}"></script>
 </head>
 
-<body>
+<body >
 
   <header>
-    <nav>
+    <nav style="height: 70px;"> 
       <div class="nav-wrapper blue darken-4" style="padding: 0 5px;">
         <a href="/login" class="brand-logo white-text center hide-on-small-and-down">
           PoPe - Portal de Pesquisas
@@ -31,15 +31,15 @@
   </div>
 
   <footer style="position: fixed; bottom: 0; width: 100%;">
-    <div class="footer-copyright blue darken-4" style="width: 100%; text-align: center; height: 50px; padding-top: 15px;">
-      <a class="white-text center-align" href="https://cpa-bayarea.github.io">2018 - Desenvolvido por IESB - BayArea</a>
+    <div class="footer-copyright blue darken-4" style="width: 100%; text-align: center; height: 70px; padding-top: 15px;">
+      <a class="white-text center-align" href="https://cpa-bayarea.github.io">2018 - Desenvolvido por IESB - Centro de Práticas acadêmicas BayArea</a>
     </div>
   </footer>
 </body>
-
 <script>
   $(document).ready(function () {
     $('select').formSelect();
   });
 </script>
+
 </html>
