--- a/organizations/templates/organization_form.html
+++ b/organizations/templates/organization_form.html
@@ -1,69 +1,103 @@
 {% extends 'base.html' %} {% block main %} {% load compress %}
 <!-- Form Organization HTML -->
-<div class="row" style="margin: 10% 0;">
-  <div class="container">
-    <form method="POST" class="col s12" action="{% url 'new-organization' %}">
-      {% csrf_token %}
-      <div class="input-field row col s12">
-        <input name="org_name" id="org_name" type="text" required>
-        <label for="org_name">Nome da Organização</label>
-        {{ form.org_name.errors}}
+<div class="row center-align" style="margin-top:1%">
+  <div class="col s12 m8 l6 offset-m2 offset-l3">
+    <div class="card z-depth-5">
+      <div class="card-content black-text">
+        <span class="card-title">Cadastro de Organização</span>
+        <i class="large material-icons">people</i>
+        <div class="row">
+          <div class="container">
+            <form method="POST" class="col s12" action="{% url 'new-organization' %}">
+              {% csrf_token %}
+              <span class="helper-text red-text col s12 l12" data-error="true">
+                <span class="helper-text red-text col s12 l6">{{ form.org_name.errors}}</span>
+                <span class="helper-text red-text col s12 l6" data-error="true">
+                  <span class="helper-text red-text col s12 l6" data-error="true">
+                    {{ form.email.errors }}
+                  </span>
+
+                  {{ form.social_reason.errors}}
+                </span>
+                <span class="helper-text red-text col s12 l6" data-error="true">
+                  {{ form.telephone.errors}}
+                </span>
+                <span class="helper-text red-text col s12 l6" data-error="true" id="cep-error">
+                  {{ form.cep.errors }}
+                </span>
+
+                {{ form.cnpj.errors}}
+              </span>
+              <span class="helper-text red-text col s12 l12" data-error="true">
+                {{ form.additional_addr.errors }}
+              </span>
+
+              <span>
+                <h6> Dados da Organização</h6>
+                <i class="material-icons" style="font-size: 40px;">account_balance</i>
+              </span>
+              <hr>
+              <div class="input-field row col s12">
+                <input name="org_name" id="org_name" type="text" required>
+                <label for="org_name">
+                  <i class="material-icons">business</i> Nome da Organização</label>
+              </div>
+              <div class="input-field row col s12 l6">
+                <input name="cnpj" id="cnpj" type="text" required>
+                <label for="cnpj">
+                  <i class="material-icons">assignment</i> CNPJ</label>
+
+              </div>
+              <div class="input-field row col s12 l6">
+                <input name="social_reason" id="social_reason" type="text" required>
+                <label for="social_reason">
+                  <i class="material-icons">group</i> Razão Social</label>
+              </div>
+
+              <div class="input-field row col s12 l6">
+                <input name="telephone" type="text" id="telephone" required>
+                <label for="telephone">
+                  <i class="material-icons">contact_phone</i> Telefone</label>
+              </div>
+
+              <div class="input-field row col s12 l6">
+                <input name="email" type="email" id="email" required>
+                <label for="email">
+                  <i class="material-icons">contact_mail</i> Email</label>
+              </div>
+              <span>
+                <h6> Localização da Organização</h6>
+                <i class="material-icons" style="font-size: 40px;">map</i>
+              </span>
+              <hr>
+              <div class="input-field row col s11 l5">
+                <input name="cep" type="text" id="cep" required>
+                <label for="cep">
+                  <i class="material-icons">location_on</i> CEP</label>
+              </div>
+              <div class="input-field row col s1 l2">
+                <button id="btn-cep" type="button" onclick="getLogradouro()" class="blue darken-2 waves-effect btn col">
+                  <i class="material-icons">search</i>
+                </button>
+              </div>
+              <div class="input-field row col s12 l6">
+                <input name="logradouro" type="text" id="logradouro" required readonly>
+                <label for="logradouro">
+                  <i class="material-icons">location_on</i> Logradouro</label>
+              </div>
+              <div class="input-field row col s12 l12">
+                <input name="additional_addr" type="text" id="additional_addr" required>
+                <label for="additional_addr">
+                  <i class="material-icons">location_on</i> Complemento</label>
+              </div>
+              <button class="blue darken-4 waves-effect waves-light btn col s12 row" type="submit">
+                Enviar
+              </button>
+            </form>
+          </div>
+        </div>
       </div>
-      <div class="input-field row col s6">
-        <input name="cnpj" id="cnpj" type="text" required>
-        <label for="cnpj">CNPJ</label>
-        <span class="helper-text red-text" data-error="true">
-          {{ form.cnpj.errors}}
-        </span>
-      </div>
-      <div class="input-field row col s6">
-        <input name="telephone" type="text" id="telephone" required>
-        <label for="telephone">Telefone</label>
-        <span class="helper-text red-text" data-error="true">
-          {{ form.telephone.errors}}
-        </span>
-      </div>
-      <div class="input-field row col s12">
-        <input name="social_reason" id="social_reason" type="text" required>
-        <label for="social_reason">Razão Social</label>
-        <span class="helper-text red-text" data-error="true">
-          {{ form.social_reason.errors}}
-        </span>
-      </div>
-      <div class="input-field row col s12">
-        <input name="email" type="email" id="email" required>
-        <label for="email">Email</label>
-        <span class="helper-text red-text" data-error="true">
-          {{ form.email.errors }}
-        </span>
-      </div>
-      <div class="input-field row col s6">
-        <input name="cep" type="text" id="cep" required>
-        <label for="cep">CEP</label>
-        <span class="helper-text red-text" data-error="true" id="cep-error">
-          {{ form.cep.errors }}
-        </span>
-      </div>
-      <div class="input-field row col s1">
-        <button id="btn-cep" type="button" onclick="getLogradouro()" class="blue darken-2 waves-effect btn col">
-          <i class="material-icons">search</i>
-        </button>
-      </div>
-      <div class="input-field row col s12">
-        <input name="logradouro" type="text" id="logradouro" required readonly>
-        <label for="logradouro">Logradouro</label>
-      </div>
-      <div class="input-field row col s12">
-        <input name="additional_addr" type="text" id="additional_addr" required>
-        <label for="additional_addr">Complemento</label>
-        <span class="helper-text red-text" data-error="true">
-          {{ form.additional_addr.errors }}
-        </span>
-      </div>
-      <button class="blue darken-4 waves-effect waves-light btn col s12 row" type="submit">
-        Enviar
-      </button>
-    </form>
+    </div>
   </div>
 </div>
 <script>
