--- a/users/templates/user_form.html
+++ b/users/templates/user_form.html
@@ -1,41 +1,60 @@
 {% extends 'base.html' %} {% block main %}
+<!-- Formulário Para o cadastro dos usuarios de nicel Prestador e Agente -->
+<div class="row center-align" style="margin-top:1%">
+  <div class="col s12 m8 l6 offset-m2 offset-l3">
+    <div class="card z-depth-5">
+      <div class="card-content black-text">
+        <span class="card-title">Formulário de Cadastro</span>
+        <span><img src="../../static/logo.png" width="150px" height="150px"  alt="logo"></span>
+        <hr>
+        <div class="row">
+          <div class="container">
+            <form method="POST" class="col s12" action="{% url 'new-user' %}">
+              {% csrf_token %}
+              <div class="input-field row col s12">
+                <input name="username" id="username" type="text" class="validate" required>
+                <label for="username">
+                  <span class="material-icons">person</span> Nome de Usuário </label>
+                <span class="helper-text red-text"> {{ form.username.errors }} </span>
+              </div>
+              <div class="input-field row col s12">
+                <input name="password" id="password" type="password" class="validate" required>
+                <label for="password">
+                  <span class="material-icons">security</span>Senha</label>
+                <span class="helper-text red-text"> {{ form.password.errors }} </span>
+              </div>
+              <div class="input-field row col s12">
+                <input name="password_confirmation" id="password_confirmation" type="password" class="validate" required>
+                <label for="password_confirmation">
+                  <span class="material-icons">security</span>Confirmar Senha</label>
+                <span class="helper-text red-text"> {{ form.password_confirmation.errors }} </span>
+              </div>
+              <div class="input-field row col s12">
+                <select name="user_type" id="user_type">
+                  <option value="P"> Prestador de Serviços </option>
+                  <option value="AG">Agente Comunitario</option>
+                </select>
+                <label for="user_type">
+                  <span class="material-icons">assignment
+                  </span> Tipo de Cadastro</label>
+                <span class="helper-text red-text"> {{ form.user_type.errors }} </span>
 
-<div class="row" style="margin-top: 10%;">
-  <div class="container">
-    <form method="POST" class="col s12" action="{% url 'new-user' %}">
-      {% csrf_token %}
-      <div class=" input-field row col s12 ">
-        <input name="username " id="username " type="text " class="validate " required>
-        <label for="username ">Nome de Usuário</label>
+
+              </div>
+              <div class="input-field row col s12">
+                <input name="email" type="email" id="email" class="validate" required>
+                <label for="email">
+                  <span class="material-icons">email</span> Email</label>
+                <span class="helper-text red-text"> {{ form.email.errors }} </span>
+              </div>
+              <button class="blue darken-4 waves-effect waves-light btn col s12 row" type="submit">
+                Enviar
+              </button>
+            </form>
+          </div>
+        </div>
       </div>
-
-      <div class="input-field row col s6 ">
-        <input name="password " id="password " type="password " class="validate " required>
-        <label for="password ">Senha</label>
-      </div>
-
-      <div class="input-field row col s6 ">
-        <input name="password_confirmation " id="password_confirmation " type="password " class="validate " required>
-        <label for="password_confirmation ">Confirmar Senha</label>
-      </div>
-
-      <div class="input-field row col s12 ">
-        <select name="user_type " id="user_type ">
-          <option value="P ">Prestador</option>
-          <option value="AG ">Agente</option>
-        </select>
-        <label for="user_type ">Tipo de Cadastro</label>
-      </div>
-
-      <div class="input-field row col s12">
-        <input name="email" type="email" id="email" class="validate" required>
-        <label for="email">Email</label>
-      </div>
-
-      <button class="blue darken-4 waves-effect waves-light btn col s12 row " type="submit ">
-        Enviar
-      </button>
-    </form>
+    </div>
   </div>
 </div>
 
