--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -11,13 +11,12 @@
   <script src="{% static 'js/materialize.min.js' %}"></script>
 </head>
 
-<body >
-
+<body>
   <header>
-    <nav style="height: 70px;"> 
+    <nav style="height: 70px;">
       <div class="nav-wrapper blue darken-4" style="padding: 0 5px;">
         <a href="/login" class="brand-logo white-text center hide-on-small-and-down">
-          PoPe - Portal de Pesquisas
+          <span> PoPe - Portal de Pesquisas</span>
         </a>
         <a href="/login" class="brand-logo white-text center hide-on-med-and-up">
           PoPe
@@ -26,16 +25,20 @@
     </nav>
   </header>
 
-  <div class="container col s12">
+  <div class="container col s12 l12 m12">
     {% block main %} {% endblock %}
   </div>
 
-  <footer style="position: fixed; bottom: 0; width: 100%;">
-    <div class="footer-copyright blue darken-4" style="width: 100%; text-align: center; height: 70px; padding-top: 15px;">
-      <a class="white-text center-align" href="https://cpa-bayarea.github.io">2018 - Desenvolvido por IESB - Centro de Práticas acadêmicas BayArea</a>
+  <footer class="page-footer blue darken-4">
+    <div class="container">
+      <div class="footer-copyright blue darken-4" style="width: 100%; height: 30px; ">
+        <a class="white-text center-align" href="https://cpa-bayarea.github.io">2018 - Desenvolvido por IESB - Centro de Práticas acadêmicas BayArea</a>
+      </div>
     </div>
   </footer>
+
 </body>
+
 <script>
   $(document).ready(function () {
     $('select').formSelect();
