--- a/users/templates/dashboard_prestador.html
+++ b/users/templates/dashboard_prestador.html
@@ -1,7 +1,51 @@
 {% extends 'dashboard_base.html' %} {% block main %}
 
-<div>
-    Hello!
+<div class="center">
+    <h3 class="flow-text">
+        Seja bem Vindo ao portal de Pesquisas
+    </h3>
+    <div class="center">
+        <span>
+            <img src="../../static/logo.png" width="150px" height="150px" alt="logo">
+        </span>
+    </div>
 </div>
-
+<form action="#">
+    <div class="row">
+        <div class="input-field col s10 l8 m6 offset-l2 offset-m2">
+            <input id="password" type="password" class="validate">
+            <label for="password">Procurar
+                <i class="material-icons">remove_red_eye</i>
+            </label>
+        </div>
+        <div class="input-field row col s1 l2">
+            <button class="blue darken-2 waves-effect btn col">
+                <i class="material-icons">search</i>
+            </button>
+        </div>
+    </div>
+</form>
+<br>
+<br>
+<div class="row">
+    <div class="col s12 m8 l6 offset-l2 offset-m2">
+        <div class="card blue darken-4">
+            <div class="card-content white-text">
+                <span class="card-title">Nome da Organização</span>
+                <div>
+                    Localização <i class="material-icons"> room </i> :
+                </div>
+                <div>
+                    Email <i class="material-icons"> message </i> :
+                </div>
+                <div>
+                    Telefone <i class="material-icons"> phone </i> :
+                </div>
+            </div>
+            <div class="card-action">
+                <a class="btn green right" href="#">Veja Mais</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
