--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -32,7 +32,7 @@
   <footer class="page-footer blue darken-4">
     <div class="container">
       <div class="footer-copyright blue darken-4" style="width: 100%; height: 30px; ">
-        <a class="white-text center-align" href="https://cpa-bayarea.github.io">2018 - Desenvolvido por IESB - Centro de Práticas acadêmicas BayArea</a>
+        <a class="white-text center" href="https://cpa-bayarea.github.io">2018 - Desenvolvido por IESB - Centro de Práticas acadêmicas BayArea</a>
       </div>
     </div>
   </footer>
