--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -31,8 +31,10 @@
               <button class="blue darken-4 waves-effect waves-light btn col s12 row" type="submit">
                 Entrar
               </button>
-              <div class="row right">
-                <a href="{% url 'new-user' %}" class="grey-text text-darken-4">Ainda não possui cadastro? Solicite Cadastro.</a>
+              <div class="col s12">
+                <div class="right">
+                  <a href="{% url 'new-user' %}" class="grey-text text-darken-4">Ainda não possui cadastro? Solicite Cadastro.</a>
+                </div>
               </div>
             </form>
           </div>
